# ilib-whisper.cpp

./: .gitmodules  CMakeLists.txt  README.md  get-ac-build.cmake
.github/workflows/: update_submodules_issue.yml
ac-local-plugin/: CMakeLists.txt  loader-schema.json
ac-local-plugin/code/: CMakeLists.txt  LocalWhisper.cpp  WhisperModelSchema.hpp  aclp-whisper-interface.hpp  whisper-schema.yml
ac-local-plugin/example/: CMakeLists.txt  ep-transcribe.cpp
ac-local-plugin/schema/: CMakeLists.txt
ac-local-plugin/schema-gen/: CMakeLists.txt  schema-gen.cpp
ac-local-plugin/schema/ac/schema/: WhisperCpp.hpp
code/: CMakeLists.txt
code/ac/whisper/: Init.cpp  Init.hpp  Instance.cpp  Instance.hpp  Logging.cpp  Logging.hpp  Model.cpp  Model.hpp  export.h
common/: CMakeLists.txt
common/ac-audio/: CMakeLists.txt  README.md
common/ac-audio/code/: ac-audio.cpp  ac-audio.hpp  export.h
common/ac-audio/test/: CMakeLists.txt  t-ac-audio.cpp
example/: CMakeLists.txt  e-basic.cpp  e-gui.cpp
local/: CMakeLists.txt
local/code/ac/local/: LocalWhisper.cpp  LocalWhisper.hpp  export.h
local/example/: CMakeLists.txt  e-local-whisper.cpp
local/tools/: CMakeLists.txt  generate-schema.cpp
test/: CMakeLists.txt  t-integration.cpp
